# openproject-chrome-extension

./: README.md  sample.json
options/: options.css  options.js
script/: .gitignore  config.template.py  main.py  pyproject.toml  test_api.py
shared/: apiClient.js  parser.js  workLogService.js
